# distosp

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  readme.md
.github/workflows/: release.yml
bot/: Cargo.toml
bot/src/: fwd.rs  main.rs
lex/: Cargo.toml
lex/src/: client.rs  lib.rs  record.rs
lex/src/place/: stream.rs
lex/src/place/stream/: chat.rs  defs.rs  graph.rs  key.rs  live.rs  livestream.rs  richtext.rs  segment.rs  server.rs
lex/src/place/stream/chat/: defs.rs  gate.rs  message.rs  profile.rs
lex/src/place/stream/graph/: get_following_user.rs
lex/src/place/stream/live/: get_live_users.rs  get_profile_card.rs  get_segments.rs
lex/src/place/stream/richtext/: facet.rs
lex/src/place/stream/server/: create_webhook.rs  defs.rs  delete_webhook.rs  get_webhook.rs  list_webhooks.rs  settings.rs  update_webhook.rs
scripts/: release.sh
