[package]
name = "distosp"
version = "0.0.3"
edition = "2024"

[dependencies]
lex = { path = "../lex" }
dotenvy = "0.15.7"
poise = "0.6.1"
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3.13", default-features = false }
time = { version = "0.3", features = ["formatting", "macros"] }
rand = "0.8.5"

anyhow = "1.0.97"
atrium-api = "0.25.2"
atrium-common = "0.1.1"
atrium-identity = "0.1.3"
atrium-oauth = "0.1.1"
atrium-xrpc-client = "0.5.13"
atrium-lex = { git = "https://github.com/sugyan/atrium.git", rev = "f162f815a04b5ecb0421b390d521c883c41d5f75" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
once_cell = "1.21.3"
atrium-xrpc = "0.12.3"
http = "1.3.1"

# Tracing dependencies
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# OpenTelemetry dependencies (because why not! 🚀)
opentelemetry = "0.21"
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tokio"] }
opentelemetry-semantic-conventions = "0.13"
tracing-opentelemetry = "0.22"
tonic = "0.10"  # For gRPC OTLP export

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "model",
    "utils",
    "collector",
    "framework",
]
version = "0.12.2"
