[package]
name = "lex"
version = "0.1.0"
edition = "2021"

[lib]
name = "lex"
path = "src/lib.rs"


[dependencies]
anyhow = "1.0.97"
atrium-api = "0.25.2"
atrium-common = "0.1.1"
atrium-identity = "0.1.3"
atrium-oauth = "0.1.1"
atrium-xrpc-client = "0.5.13"
atrium-lex = { git = "https://github.com/sugyan/atrium.git", rev = "f162f815a04b5ecb0421b390d521c883c41d5f75" }
serde = { version = "1.0.219", features = ["derive"] }
log = "0.4.27"
env_logger = "0.11.8"
serde_json = "1.0.140"
once_cell = "1.21.3"
atrium-xrpc = "0.12.3"
http = "1.3.1"
serde_bytes = "0.11.19"
